# Amisi-Hospital-Management-System

./: .env.example  .gitignore  .vercelignore  ClinicalDesignSpec.md  Dockerfile  PRISMA_SETUP.md  README.md  RoleDashboardSpec.md  audit-users.js  build-output-ascii.txt  build-output.txt  build_check_20260504_125048.txt  build_check_20260504_213700.txt  build_check_output.txt  build_errors_20260504_123615.txt  build_log.txt  build_log_20260511.txt  build_output.txt  check-env.py  debug.py  docker-compose.yml  full-hash.txt  full_build_log.txt  generate-seed-hash-final.js  generate-seed-hash.js  git-push.py  lint_output.txt  package.json  pnpm-lock.yaml  push-main.py  setup_routes.sh  tsconfig.json  turbo.json  vercel.json  web_dev_log.txt
.github/workflows/: desktop-build.yml  mobile-build.yml
apps/api/:  .env  .env.example  package.json  tsconfig.json
apps/desktop/: .env.example  package.json  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/local-node/src-tauri/: Cargo.toml  tauri.conf.json
apps/local-node/src-tauri/src/: main.rs
docs/: 30-day-plan.md  API_SPEC.md  ARCHITECTURE.md  COMPLETE_DELIVERY.md  FINAL_DELIVERY.md  INTEGRATION.md  ROUTING_FIX.md  SYSTEM_ADMIN_DASHBOARD_SUMMARY.md  SYSTEM_ADMIN_UX_GUIDELINES.md  TenantIsolation.md  UX_WORKFLOW.md  audit-system-design.md  env.md  frontend-to-crm-integration.md
scratch/: check_db.js  check_db.ts  test_pg.js
scripts/: manage-modules.ts  push-to-main.js  push-to-main.sh  push.js  push.py  setup-node.ps1
(+549 files in other folders)
